--- a/Exercise01.html
+++ b/Exercise01.html
@@ -2,16 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <title>Exercise1</title>
 </head>
 <body>
-<h1>Octopusmania</h1>
+<h1>Devmania</h1>
 <p>Octopuses are known for their remarkable intelligence. They have the ability to solve puzzles, navigate mazes, and
     even exhibit observational learning. They can also manipulate objects with their tentacles and have been observed
     using tools.<br><a href="https://en.wikipedia.org/wiki/Octopus">Mustekala</a></p>
 <table>
-    <tr><img url="https://i.pinimg.com/originals/8a/5b/d5/8a5bd5422e1bf937ffdf20b635898725.jpg" alt="img"></tr>
-    <tr></tr>
+    <tr>
+        <td><img src="https://i.pinimg.com/originals/8a/5b/d5/8a5bd5422e1bf937ffdf20b635898725.jpg" alt="img"
+                 width="100rem" alt="img" width="30%" height="30%"></td>
+    </tr>
+    <tr>
+        <td><img src="https://file.forms.app/sitefile/55+Hilarious-developer-memes-that-will-leave-you-in-splits-2.jpeg"
+                 alt="img" width="40%" height="40%"></td>
+    </tr>
 </table>
+<ul>
+    <li><a href="https://www.siliconrepublic.com/careers/career-memes-of-the-week-web-developer-part-2">Link 1</a></li>
+    <li><a href="https://devhumor.com/">Link 2</a></li>
+</ul>
 </body>
 </html>
