--- a/Exercise01.html
+++ b/Exercise01.html
@@ -12,12 +12,12 @@
     using tools.<br><a href="https://en.wikipedia.org/wiki/Octopus">Mustekala</a></p>
 <table>
     <tr>
-        <td><img src="https://i.pinimg.com/originals/8a/5b/d5/8a5bd5422e1bf937ffdf20b635898725.jpg" alt="img"
-                 width="100rem" alt="img" width="30%" height="30%"></td>
+        <td><img src="https://i.pinimg.com/originals/8a/5b/d5/8a5bd5422e1bf937ffdf20b635898725.jpg" alt="img1"
+                 width="30%" height="30%"></td>
     </tr>
     <tr>
         <td><img src="https://file.forms.app/sitefile/55+Hilarious-developer-memes-that-will-leave-you-in-splits-2.jpeg"
-                 alt="img" width="40%" height="40%"></td>
+                 alt="img2" width="40%" height="40%"></td>
     </tr>
 </table>
 <ul>
