--- a/Exercise01.html
+++ b/Exercise01.html
@@ -13,11 +13,11 @@
 <table>
     <tr>
         <td><img src="https://i.pinimg.com/originals/8a/5b/d5/8a5bd5422e1bf937ffdf20b635898725.jpg" alt="img1"
-                 width="30%" height="30%"></td>
+                 width="300" height="300"></td>
     </tr>
     <tr>
         <td><img src="https://file.forms.app/sitefile/55+Hilarious-developer-memes-that-will-leave-you-in-splits-2.jpeg"
-                 alt="img2" width="40%" height="40%"></td>
+                 alt="img2" width="400" height="400"></td>
     </tr>
 </table>
 <ul>
