--- a/Exercise01.html
+++ b/Exercise01.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css" defer>
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <title>Exercise1</title>
 </head>
@@ -9,18 +10,35 @@
 <h1>Devmania</h1>
 <p>Octopuses are known for their remarkable intelligence. They have the ability to solve puzzles, navigate mazes, and
     even exhibit observational learning. They can also manipulate objects with their tentacles and have been observed
-    using tools.<br><a href="https://en.wikipedia.org/wiki/Octopus">Mustekala</a></p>
+    using tools.<br><a href="https://en.wikipedia.org/wiki/Octopus">Mustekala</a><br></p>
+<img src="https://i.pinimg.com/originals/8a/5b/d5/8a5bd5422e1bf937ffdf20b635898725.jpg" alt="img1"
+     width="300" height="300"><br>
+<img src="https://file.forms.app/sitefile/55+Hilarious-developer-memes-that-will-leave-you-in-splits-2.jpeg"
+     alt="img2" width="400" height="400"><br>
 <table>
     <tr>
-        <td><img src="https://i.pinimg.com/originals/8a/5b/d5/8a5bd5422e1bf937ffdf20b635898725.jpg" alt="img1"
-                 width="300" height="300"></td>
+        <td><h4><br>Boink</h4></td>
+        <td><h4>Boink</h4></td>
+        <td><h4><br>Boink</h4></td>
     </tr>
     <tr>
-        <td><img src="https://file.forms.app/sitefile/55+Hilarious-developer-memes-that-will-leave-you-in-splits-2.jpeg"
-                 alt="img2" width="400" height="400"></td>
+        <td><h4><br>Boink</h4></td>
+        <td><h4>Boink</h4></td>
+        <td><h4><br>Boink</h4></td>
+
+    </tr>
+    <tr>
+        <td><h4><br>Boink</h4></td>
+        <td><h4>Boink</h4></td>
+        <td><h4><br>Boink</h4></td>
+    </tr>
+    <tr>
+        <td><h4><br>Boink</h4></td>
+        <td><h4>Boink</h4></td>
+        <td><h4><br>Boink</h4></td>
     </tr>
 </table>
-<ul>
+<ul class="list">
     <li><a href="https://www.siliconrepublic.com/careers/career-memes-of-the-week-web-developer-part-2">Link 1</a></li>
     <li><a href="https://devhumor.com/">Link 2</a></li>
 </ul>
