--- a/Exercise01.html
+++ b/Exercise01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css" defer>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <title>Exercise1</title>
 </head>
